<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
      <item android:id="@+id/action_view_supplements"
            android:title="@string/action_view_supplements"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"/>
      <item android:id="@+id/action_supplement_stacks"
            android:title="@string/action_supplement_stacks"
            android:orderInCategory="2"
            app:showAsAction="ifRoom"/>
      <item android:id="@+id/action_view_topics"
            android:title="@string/action_view_topics"
            android:orderInCategory="3"
            app:showAsAction="ifRoom"/>
      <item android:id="@+id/action_FAQ"
            android:title="@string/action_FAQ"
            android:orderInCategory="4"
            app:showAsAction="ifRoom"/>

</menu>
